<?xml version="1.0"?>
<package format="2">

  <name>maze_perch</name>

  <version>0.0.0</version>
  
  <description>The maze_perch package</description>

  <author email="nequamy@gmail.com">IDK Maze</author>
  <maintainer email="perch@todo.todo">perch</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_depend>pandas</build_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>


  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <build_export_depend>pandas</build_export_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <exec_depend>pandas</exec_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sendor_msgs</exec_depend>

  <export>

  </export>
</package>
